log
Wed 20 Mar 2024 08:44:41 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:40: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |     List* elemento = malloc(1 * sizeof(List));
      |                                        ^~~~
exercises.c:47:11: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |     List* elemento = malloc(1 * sizeof(List));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
27d2dbb
Wed 20 Mar 2024 08:46:00 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:40: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |     List* elemento = malloc(1 * sizeof(List));
      |                                        ^~~~
exercises.c:47:11: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |     List* elemento = malloc(1 * sizeof(List));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
112282d
Wed 20 Mar 2024 08:48:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:10: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |     int* elemento = malloc(1 * sizeof(int));
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d5fc8c6
Wed 20 Mar 2024 08:49:44 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
0873fca
Wed 20 Mar 2024 08:50:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
dfec0eb
Wed 20 Mar 2024 08:50:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:18: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     pushFront(L, *elemento);
      |                  ^~~~~~~~~
      |                  |
      |                  int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘int’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:49:18: error: ‘*elemento’ is used uninitialized [-Werror=uninitialized]
   49 |     pushFront(L, *elemento);
      |                  ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1294f6b
Wed 20 Mar 2024 08:51:04 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
e82a74f
Wed 20 Mar 2024 08:51:44 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:10: error: ‘i’ undeclared (first use in this function)
   63 |   while (i != NULL){
      |          ^
exercises.c:63:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ade2f52
Wed 20 Mar 2024 08:53:29 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:10: error: ‘i’ undeclared (first use in this function)
   63 |   while (i != NULL){
      |          ^
exercises.c:63:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f9fc05f
Wed 20 Mar 2024 08:54:57 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:10: error: ‘i’ undeclared (first use in this function)
   63 |   while (i != NULL){
      |          ^
exercises.c:63:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:68:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   68 |     suma += elemento;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
402fba6
Wed 20 Mar 2024 08:57:39 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |     suma += elemento;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
294f748
Wed 20 Mar 2024 09:00:21 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
174b1b7
